Changelog for NICOS 2
=====================

**Release 2.2.0**

  - Added the "info()" command.

  - Added a new input mode called "simple parameter mode".  In this mode,
    commands and arguments can be entered without parentheses and
    commas.  Control structures are not supported.  It is toggled with
    the "SetSPM" command.

  - Setup files can now also placed in subdirectories of the setup path.
    Entries in parent directories override entries in subdirectories
    when two files have the same name.

  - Restructured the "nicos" Python package layout.  Custom libraries
    will have to be adapted.

  - Added common FRM-II sample environment and reactor setups.  They are
    installed by default for FRM-II instruments.

  - Added "sweep" scan command.

  - The Qt and HTML status monitors can now plot values versus time.

  - Added back text-based client for the daemon.

  - Changed cache store file format to retain info if the key will expire.
    This fixes cache startup behavior even after unclean shutdowns.

  - Added "checkalign" command for TAS instruments.

  - Added HTML version of NICOS monitor.

  - Added basic mathematical functions and constants in the default namespace.

  - Added "resplot" and "hklplot" commands for TAS instruments, which are
    interactive resolution calculation and reciprocal space map helpers.

  - Added "alpha" attached-device to triple-axis instrument that is moved
    to the angle between ki and Q whenever the TAS is moved.

  - Changed "users" parameter of the experiment device to a simple string,
    and it is now possible to add users directly in "NewExperiment()".

  - Added "maxage" parameter to "doRead()" and "doStatus()" methods,
    which can be given to subdevices.

  - Added basic TANGO devices.

  - Added a "DeviceAlias" object that can be used to refer with one name
    to different actual devices.

  - Added graphical help system to the GUI client.  Improved quality of
    docstrings of most commands.
